--- a/css/style.css
+++ b/css/style.css
@@ -171,19 +171,21 @@ textarea.modern{
 	left: 0px;
 	bottom: 19px;
 	position: absolute;
-	height: 140px;
+	height: 105px;
 	width: 0px;
 	background-color: blue;
 	opacity: 0;
+	padding: 17px;
 }
 #delete_area{
 	right: 0px;
 	bottom: 19px;
 	position: absolute;
-	height: 140px;
+	height: 105px;
 	width: 0px;
 	background-color: red;
 	opacity: 0;
+	padding: 17px;
 }
 .area_with_hover_effects{
 	opacity: 0.7;
