--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ textarea.modern{
 	border-radius: 12px 12px 12px 12px;
 	display: -moz-box;
 	float: left;
+	cursor: pointer;
 }
 .box:hover{
 	-webkit-box-shadow: 0px 0px 12px 3px #A1D6FF;
