--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ hr{
 	margin: 0px 10px;
 }
 body{
-    	padding-top: 2px;
+    padding-top: 2px;
 	padding-bottom: 10px;
 }
 .main{
@@ -144,30 +144,6 @@ textarea.modern{
 	padding-top: 10px;
 	margin-top: 3px;
 }
-.edit_box{
-	width: 30px;
-	height: 30px;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	-webkit-border-top-left-radius: 12px;
-	-moz-border-radius-topleft: 12px;
-	border-top-left-radius: 12px;
-	background-color: #5555FF;
-	opacity: 0.94;
-}
-.delete_box{
-	width: 30px;
-	height: 30px;
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	-webkit-border-top-right-radius: 12px;
-	-moz-border-radius-topright: 12px;
-	border-top-right-radius: 12px;
-	background-color: #FF5555;
-	opacity: 0.94;
-}
 #edit_area{
 	left: 0px;
 	bottom: 19px;
@@ -190,6 +166,14 @@ textarea.modern{
 }
 .area_with_hover_effects{
 	opacity: 0.7;
+}
+.add_box_icon{
+	position: absolute;
+	height: 60px;
+	border: 1px solid black;
+	border-radius: 100px;
+	background:rgba(0,0,0,0.05);
+	cursor: pointer;
 }
 label, input:not([type=checkbox]):not([type=radio]):not([id=main_submit]):not([id=main_input]) {
 	display: block;
