font of color boxes chnged & main area increased

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ textarea.modern{
 	border-radius: inherit;
 }
 .box_farbe_link{
+	font-family: 'Baloo Paaji', cursive;
 	text-align: center;
 	text-decoration: none;
 	margin-top: 3px;
